# cyclo-veda

./: .env.example  README.md  docker-compose-dev.yml  docker-compose.yml
.windsurf/rules/: environment.md  guided-mode.md  resumability.md  security.md
backend/: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/auth/: dependencies.py
backend/app/models/: __init__.py  token.py  user.py
backend/app/routers/: auth.py  health.py  strava.py
backend/app/services/: auth_service.py
backend/tests/: README.md  __init__.py  conftest.py
backend/tests/integration/: __init__.py
backend/tests/integration/test_api/: __init__.py  test_auth.py
backend/tests/unit/: __init__.py
backend/tests/unit/test_models/: __init__.py  test_user.py
backend/tests/unit/test_services/: __init__.py  test_auth_service.py
documentation/: README.md
documentation/adr/: 2025-07-26-case-sensitive-email-authentication.md  2025-07-26-clean-architecture-patterns.md  2025-07-26-pytest-testing-framework.md  2025-08-18-jwt-authentication.md  2025-09-20-docker-containerization.md  2025-11-23-css-modules-architecture.md  2025-11-23-enhanced-component-architecture.md  2025-11-29-strava-integration-strategy.md
documentation/changelog/: CHANGELOG.md
documentation/docs/: api-reference.md  architecture.md  authentication.md  database-design.md  development.md  docker-setup.md  elevator-pitch.md  mvp.md  poc.md
frontend/: .dockerignore  .env.example  .gitignore  .prettierignore  Dockerfile  README.md  eslint.config.js  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/auth/: Login.css  Login.module.css  Login.tsx  ProtectedRoute.tsx  PublicRoute.tsx
frontend/src/components/layout/: Dashboard.css  Dashboard.tsx
frontend/src/components/layout/Dashboard/: Dashboard.css  Dashboard.module.css  Dashboard.tsx
frontend/src/components/layout/Layout/: Layout.module.css  Layout.tsx
frontend/src/components/layout/Layout/components/: Footer.tsx  Header.tsx  Sidebar.tsx
frontend/src/components/layout/Settings/: Settings.module.css  Settings.tsx
frontend/src/components/layout/Settings/ConnectionCard/: ConnectionCard.module.css  ConnectionCard.tsx
frontend/src/constants/: index.ts
frontend/src/hooks/: useAuth.ts
frontend/src/services/: authService.ts
frontend/src/types/: auth.ts
frontend/src/utils/: errorHandler.ts  index.ts
